settings.js: checkboxes hori extend not full width of window

--- a/webroot/callee/settings/index.html
+++ b/webroot/callee/settings/index.html
@@ -144,23 +144,23 @@ input[type=submit]:focus {
 			<label id="tootOnCallLabel" style="margin-left:-4px; display:block; margin-top:4px;">
 				<input type="checkbox" id="tootOnCall" class="checkbox"> Enable Mastodon Notifications</label>
 			</label>
-			<label id="skipUserSendImmediatelyLabel" style="margin-left:-4px; display:block; margin-top:6px;">
+			<label id="skipUserSendImmediatelyLabel" style="margin-left:-4px; _display:block; margin-top:6px;">
 				<input type="checkbox" id="skipUserSendImmediately" class="checkbox"> Do not ask caller, send immediately</label>
-			</label>
+			</label><br>
 		</div>
 		<br>
 
-		<label id="storeContactsLabel" style="margin-left:-4px; display:block; margin-bottom:5px;">
+		<label id="storeContactsLabel" style="margin-left:-4px;">
 			<input type="checkbox" id="storeContacts" class="checkbox"> Save contacts</label>
-		</label>
+		</label><br>
 
-		<label id="storeMissedCallsLabel" style="margin-left:-4px; display:block; margin-bottom:5px;">
+		<label id="storeMissedCallsLabel" style="margin-left:-4px;">
 			<input type="checkbox" id="storeMissedCalls" class="checkbox"> Save missed calls</label>
-		</label>
+		</label><br>
 
-		<label id="dialSoundsMutedLabel" style="margin-left:-4px; display:block; margin-bottom:5px;">
+		<label id="dialSoundsMutedLabel" style="margin-left:-4px;">
 			<input type="checkbox" id="dialSoundsMuted" class="checkbox"> Dial sounds muted</label>
-		</label>
+		</label><br>
 
 		<br>
 		<div id="errstring" style="color:#ff0;"></div>
