settings.js: checkboxes verti extend

--- a/webroot/callee/settings/index.html
+++ b/webroot/callee/settings/index.html
@@ -150,22 +150,28 @@ input[type=submit]:focus {
 		</div>
 		<br>
 
+		<div style="margin-top:5px;">
 		<label id="storeContactsLabel" style="margin-left:-4px;">
 			<input type="checkbox" id="storeContacts" class="checkbox"> Save contacts</label>
-		</label><br>
+		</label>
+		</div>
 
+		<div style="margin-top:5px;">
 		<label id="storeMissedCallsLabel" style="margin-left:-4px;">
 			<input type="checkbox" id="storeMissedCalls" class="checkbox"> Save missed calls</label>
-		</label><br>
+		</label>
+		</div>
 
+		<div style="margin-top:5px;">
 		<label id="dialSoundsMutedLabel" style="margin-left:-4px;">
 			<input type="checkbox" id="dialSoundsMuted" class="checkbox"> Dial sounds muted</label>
-		</label><br>
+		</label>
+		</div>
 
 		<br>
 		<div id="errstring" style="color:#ff0;"></div>
 
-		<input type="submit" name="Submit" id="submit" value="OK" style="width:100px; border-radius:3px;">
+		<input type="submit" name="Submit" id="submit" value="Store" style="width:100px; border-radius:3px;">
 
 		<div id="verstring" style="margin-top:24px; font-size:80%; opacity:0.85;"></div>
 	</form>
