--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -25,7 +25,7 @@ body {
 
 .buttonRow {
 	display:grid;
-	grid-template-columns: 80px 27px 8fr;
+	grid-template-columns: 70px 8fr;
 	list-style-type:none;
 	padding-top:8px;
 	padding-bottom:14px;
@@ -355,7 +355,7 @@ input[type=submit]:focus {
 
 /* SVG top screen icon buttons */
 .iconbutton {
-	position:relative; float:right; width:36px; margin-left:13px; margin-right:13px; margin-top:2px;
+	position:relative; float:right; width:36px; margin-left:13px; margin-right:13px; margin-top:3px;
 	z-index:100; user-select:none; cursor:pointer; 
 	transition:all 300ms ease-out;
 	opacity:0.8; 
@@ -366,19 +366,19 @@ input[type=submit]:focus {
 
 @media only screen and (max-width: 460px) {
 	.iconbutton {
-		position:relative; float:right; width:28px; margin-left:12px; margin-right:12px; margin-top:7px;
+		position:relative; float:right; width:32px; margin-left:10px; margin-right:10px; margin-top:6px;
 	}
 }
 
 @media only screen and (max-width: 390px) {
 	.iconbutton {
-		position:relative; float:right; width:25px; margin-left:10px; margin-right:10px; margin-top:8px;
+		position:relative; float:right; width:28px; margin-left:8px; margin-right:8px; margin-top:8px;
 	}
 }
 
 @media only screen and (max-width: 330px) {
 	.iconbutton {
-		position:relative; float:right; width:22px; margin-left:7px; margin-right:7px; margin-top:10px;
+		position:relative; float:right; width:24px; margin-left:6px; margin-right:6px; margin-top:10px;
 	}
 }
 
@@ -522,13 +522,12 @@ input:disabled + .slider {
 			<input type="checkbox" id="onlineSwitch">
 			<span id="onlineSwitchSlider" class="slider"></span>
 		</label>
-
+<!--
 		<span style="position:relative; user-select:none;">
-			<!-- red-gradient.svg -->
 			<img id="peerConIndicator" src=""
 				 style="width:100%; position:absolute; top:50%; transform:translateY(-42%);">
 		</span>
-
+-->
 		<span>
 		<img id="menu"         onclick="menuDialogOpen(menuDialogElement,1)" src="menu.svg" class="iconbutton">
 		<img id="checkboxes"   onclick="openSlide()"        src="checkboxes.svg"  class="iconbutton">
