--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -32,6 +32,49 @@ body {
 	_max-height:40px;
 }
 
+.icongrid {
+	display:grid;
+	grid-template-columns: 44px 44px 44px 44px 44px 44px;
+	direction: rtl;
+	column-gap: 12px;
+	padding-right:12px;
+}
+
+@media only screen and (max-width: 420px) {
+	.icongrid {
+		margin-top:3px;
+		grid-template-columns: 32px 32px 32px 32px 32px 32px;
+	}
+}
+
+@media only screen and (max-width: 344px) {
+	.icongrid {
+		margin-top:5px;
+		grid-template-columns: 28px 28px 28px 28px 28px 28px;
+		column-gap: 8px;
+	}
+}
+
+@media only screen and (max-width: 300px) {
+	.icongrid {
+		margin-top:8px;
+		grid-template-columns: 24px 24px 24px 24px 24px 24px;
+		column-gap: 6px;
+	}
+}
+
+.iconbutton {
+	width:100%;
+	max-width:36px;
+	z-index:100; user-select:none; cursor:pointer;
+	opacity:0.8;
+}
+
+.iconbutton:hover, .iconbutton:active {
+	opacity:1; 
+}
+
+
 /* Answer, Hang Up, TextChat, Send File */
 .answerButtons {
 	padding-top:10px;
@@ -353,9 +396,9 @@ input[type=submit]:focus {
 	-webkit-transform: scale(-1, 1);
 }
 
-/* SVG top screen icon buttons */
+/*
 .iconbutton {
-	position:relative; float:right; width:36px; margin-left:13px; margin-right:13px; margin-top:3px;
+	position:relative; float:right; width:36px; margin-left:13px; margin-right:13px; margin-top:-1px;
 	z-index:100; user-select:none; cursor:pointer; 
 	transition:all 300ms ease-out;
 	opacity:0.8; 
@@ -366,22 +409,22 @@ input[type=submit]:focus {
 
 @media only screen and (max-width: 460px) {
 	.iconbutton {
-		position:relative; float:right; width:32px; margin-left:10px; margin-right:10px; margin-top:6px;
+		position:relative; float:right; width:32px; margin-left:10px; margin-right:10px; margin-top:1px;
 	}
 }
 
 @media only screen and (max-width: 390px) {
 	.iconbutton {
-		position:relative; float:right; width:28px; margin-left:8px; margin-right:8px; margin-top:8px;
+		position:relative; float:right; width:28px; margin-left:8px; margin-right:8px; margin-top:4px;
 	}
 }
 
 @media only screen and (max-width: 330px) {
 	.iconbutton {
-		position:relative; float:right; width:24px; margin-left:6px; margin-right:6px; margin-top:10px;
+		position:relative; float:right; width:24px; margin-left:6px; margin-right:6px; margin-top:6px;
 	}
 }
-
+*/
 
 /* online switch top left, css by Marcus Burnette https://codepen.io/mburnette/ */
 .switch input {
@@ -405,6 +448,7 @@ input[type=submit]:focus {
 	border-radius: 30px;
 	box-shadow: 0 0 0 2.5px #ccc, 0 0 5px #ccc;
 	_box-shadow: 0 0 0 2.5px #3af, 0 0 4px #3af;
+	_background-color: #ccc;
 	cursor: pointer;
 	border: 4px solid transparent;
 	overflow: hidden;
@@ -426,7 +470,7 @@ input:checked + .slider:before {
 	transform: translateX(30px); /*translateX(w-h)*/
 	_background-color: #7af;
 	_background-color: #27c;
-	_background-color: #3af;
+_background-color: #3af;
 	_background-color: #aaf;
 	_background-color: attr('data-before');
 }
@@ -518,7 +562,7 @@ input:disabled + .slider {
 <div id="containerOuter">
 <div id="container">
 	<div class="buttonRow" id="buttonRow" >
-		<label class="switch" style="margin-top:8px;">
+		<label class="switch" style="margin-top:5px;">
 			<input type="checkbox" id="onlineSwitch">
 			<span id="onlineSwitchSlider" class="slider"></span>
 		</label>
@@ -527,8 +571,16 @@ input:disabled + .slider {
 			<img id="peerConIndicator" src=""
 				 style="width:100%; position:absolute; top:50%; transform:translateY(-42%);">
 		</span>
+
+		<img id="menu"         onclick="menuDialogOpen(menuDialogElement,1)" src="menu.svg" class="iconbutton">
+		<img id="checkboxes"   onclick="openSlide()"        src="checkboxes.svg"  class="iconbutton">
+		<img id="dialpad"      onclick="openDialId('')"     src="dialpad.svg"     class="iconbutton">
+		<img id="iconContacts" onclick="openContacts()"     src="contacts.svg"    class="iconbutton" style="display:none;">
+		<img id="camera"       onclick="videoSwitch(false)" src="camera.svg"      class="iconbutton">
+		<img id="exclamation"  onclick=""                   src="exclamation.svg" class="iconbutton" style="display:none;">
 -->
-		<span>
+
+		<span class="icongrid">
 		<img id="menu"         onclick="menuDialogOpen(menuDialogElement,1)" src="menu.svg" class="iconbutton">
 		<img id="checkboxes"   onclick="openSlide()"        src="checkboxes.svg"  class="iconbutton">
 		<img id="dialpad"      onclick="openDialId('')"     src="dialpad.svg"     class="iconbutton">
