callee: goOnlineSwitch slider with hi-lite and checkbox:checked background-color NOW THE SAME color; onload checkbox resetting for FF

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -244,8 +244,7 @@ label {
 .checkbox:active, .checkbox:checked:active {
 }
 .checkbox:checked {
-	_background-color: #4cf;
-	background-color: #06c;
+	background-color: #4cf;
 }
 
 .callListTitle {
