callee: showOnlineReadyMsg(): do not show 'Call in progress'; .callScreen removed padding-top:10px

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -82,7 +82,7 @@ body {
 /* Answer, Hang Up, TextChat, Send File */
 .callScreen {
 	margin: 0 auto;
-	padding-top:10px;
+	_padding-top:10px;
 	padding-bottom:15px;
 	max-width:360px;
 	padding-left:12px;
