--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -84,7 +84,8 @@ body {
 	margin: 0 auto;
 	_padding-top:10px;
 	padding-bottom:15px;
-	max-width:360px;
+	border-radius:8px;
+	width:86%;
 	padding-left:12px;
 	padding-right:12px;
 	background-color: navy;
@@ -94,21 +95,21 @@ body {
 	padding-bottom:15px;
 	display:grid;
 	grid-template-columns: 5fr 5fr;
-	column-gap:22px;
-	row-gap:22px;
-	width:100%;
-	_max-width:360px;
-	_padding-right:12px;
+	column-gap:16px;
+	row-gap:18px;
+	width:96%;
+	max-width:320px;
+	margin: 0 auto;
 }
-@media only screen and (min-width: 560px) {
+@media only screen and (min-width: 580px) {
 	.callScreen {
-		max-width:640px;
-		padding-right:20px;
+		width:95%;
+		max-width:700px;
 	}
 	.answerButtons {
-		grid-template-columns: 5fr 5fr 5fr 5fr;
-		_max-width:640px;
-		_padding-right:20px;
+		width:98%;
+		max-width:600px;
+		grid-template-columns: repeat(4, 5fr);
 	}
 }
 
@@ -122,7 +123,7 @@ body {
 	font-weight: 400;
 	font-family:sans-serif;
 	padding: 0.4em 0.1em 0.4em 0.1em;
-	min-width: 115px;
+	min-width: 100px;
 	_max-width: 180px;
 	outline: none;
 	text-align: center;
@@ -130,20 +131,16 @@ body {
 	cursor: pointer;
 	box-sizing: border-box;
 }
-/*
-.mainbutton:focus {
-	_background-color: #6c6;
-}
-*/
 .mainbutton:active {
 	background-color: #02a;
 	outline:none;
 }
-/*
 .mainbutton[disabled] {
-	color:#aaa;
+	opacity:0.7;
 }
-*/
+.mainbutton:focus {
+	color: #fff;
+}
 @media (hover: hover) {
 	.mainbutton:hover {
 		background-color: #69f;
@@ -586,8 +583,8 @@ input:disabled + .slider {
 
 	<!-- turn on with "display:grid" -->
 	<div id="callScreen" class="callScreen" style="display:none">
-		<div id="callScreenType" style="text-align:center;padding:20px;">---</div>
-		<div id="callScreenPeerData" style="text-align:center;padding:20px;">---</div>
+		<div id="callScreenType" style="text-align:center;padding-top:20px;margin-bottom:20px;color:#eee;font-size:0.9em;">---</div>
+		<div id="callScreenPeerData" style="text-align:center;margin:20px;color:#fff;">---</div>
 		<div id="answerButtons" class="answerButtons">
 			<button id="answerButton" class="mainbutton">Answer</button>
 			<button id="rejectButton" class="mainbutton">Hang Up</button>
