callee: darker red for reject button; fat font for callScreenType + callScreenPeerData; no reduced font-size for callScreenType

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -583,8 +583,8 @@ input:disabled + .slider {
 
 	<!-- turn on with "display:grid" -->
 	<div id="callScreen" class="callScreen" style="display:none">
-		<div id="callScreenType" style="text-align:center;padding-top:20px;margin-bottom:20px;color:#eee;font-size:0.9em;">---</div>
-		<div id="callScreenPeerData" style="text-align:center;margin:20px;color:#fff;">---</div>
+		<div id="callScreenType" style="text-align:center;padding-top:20px;margin-bottom:20px;color:#fff;font-weight:600;">---</div>
+		<div id="callScreenPeerData" style="text-align:center;margin:20px;color:#fff;font-weight:600;">---</div>
 		<div id="answerButtons" class="answerButtons">
 			<button id="answerButton" class="mainbutton">Answer</button>
 			<button id="rejectButton" class="mainbutton">Hang Up</button>
