--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -619,7 +619,7 @@ input:disabled + .slider {
 
 	<div id="ownlink" style="opacity:0.9; padding-top:10px; padding-bottom:10px; display:none;"></div>
 
-	<div id="missedCallsTitle" class="callListTitle" onClick="clrMissedCalls();" style="display:none;">Missed calls:</div>
+	<div id="missedCallsTitle" class="callListTitle" onClick="clrMissedCalls();" style="cursor:pointer;display:none;">Missed calls:</div>
 	<div id="missedCalls" class="callList" style="display:none;"></div>
 
 	<div id="timer" class="timer">4:32</div>
