client.js gotStream(): one more place to localVideoFrame.muted = 1 to activate mute; callee html + caller html: progressSend element wider

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -594,7 +594,7 @@ input:disabled + .slider {
 		</div>
 	</div>
 
-	<div id="progressSend" style="width:100%;max-width:460px;padding-top:10px;display:none;">
+	<div id="progressSend" style="width:95%;_max-width:460px;padding-top:10px;display:none;">
 		<div id="progressSendLabel">sending:</div>
 		<progress id="fileProgressSend" max="0" value="0" style="width:100%" onclick="stopProgressSend()"></progress>
 	</div>
