--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -429,7 +429,7 @@ input[type=submit]:focus {
 	<button id="chatButton" style="display:none; margin-top:4px; padding-top:4px; padding-bottom:3px;">TextChat</button>
 
 
-	<div id="progressSend" style="width:100%;max-width:360px;display:none;">
+	<div id="progressSend" style="width:95%;_max-width:360px;display:none;">
 		<div id="progressSendLabel">sending:</div>
 		<progress id="fileProgressSend" max="0" value="0" style="width:100%" onclick="stopProgressSend()"></progress>
 	</div>
