--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -541,7 +541,7 @@ input[type=submit]:focus {
 		<div id="status" class="status"></div>
 
 		<label class="formlabel" id="avSelectLabel" for="idSelect" style="margin-left:0;margin-top:6px;_display:none;">
-			<select id="avSelect" class="select" onchange="getStream(this)"></select>
+			<select id="avSelect" class="select" onchange="getStream(this,'html')"></select>
 		</label>
 
 		<label class="formlabel" id="idSelectLabel" for="idSelect" style="margin-left:0;margin-top:6px;display:none;">
