3 changes for testing; caller: not display avSelect; caller + callee: use 'height=device-height' as html meta tag (for Android soft keybord testing)

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -3,7 +3,7 @@
 <head>
 <!-- WebCall Copyright 2023 timur.mobi. All rights reserved. -->
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, height=device-height, user-scalable=yes, initial-scale=1.0">
 <title>WebCall Callee</title>
 <meta property="og:title" content="WebCall Audiophile Telephony">
 <meta name="twitter:title" content="WebCall Audiophile Telephony">
