--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -605,7 +605,7 @@ input:disabled + .slider {
 	</div>
 
 	<div id="msgboxdiv" style="padding-top:10px;padding-bottom:10px;display:none;">
-		<textarea id="msgbox" class="msgbox" spellcheck="false""></textarea>
+		<textarea id="msgbox" class="msgbox" spellcheck="false" maxlength="125"></textarea>
 		<div id="textbox" style="display:none;">
 			<form action="javascript:;" onsubmit="submitFormDone(2)">
 				<input name="enterText" id="enterText" type="text" class="formtext" style="width:97%; max-width:550px;">
