client.js showStatus(): no more display=none, empty msg is actually printed; caller.js hangup(): always clear on showStatus on end; caller + callee css: use fixed height for status; settings.js ajaxFetch() with try/catch for xhr.send()

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -162,6 +162,7 @@ body {
 	padding-top: 12px;
 	padding-bottom: 12px;
 	width: 98%;
+	_height:20px;
 	max-width: 570px;
 	transition: opacity 400ms ease-in-out;
     color: #ccc;
@@ -561,7 +562,7 @@ input:disabled + .slider {
 		</div>
 	</div>
 
-	<div id="status" class="status" style="display:none"></div>
+	<div id="status" class="status" _style="display:none"></div>
 
 	<form action="javascript:;" onsubmit="submitFormDone(1)" style="max-width:420px;margin-top:20px;display:none;" id="password">
 		<input type="text" autocomplete="username" id="username" style="display:none;" required>
